[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-agent-env"
version = "1.0.0"
description = "OpenEnv SQL Agent Training Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai",
]
